# mixel

./: Cargo.toml  SPEC.md  config.toml
src/: application.rs  canvas.rs  commands.rs  cursor.rs  input.rs  lark.rs  main.rs
