[package]
name = "mixel"
version = "0.1.0"
authors = ["Togglebit <me@togglebit.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = "1.5.1"
copypasta = "0.7.1"
nightmaregl = { path = "../nightmaregl" }
serde = { version = "1.0.125", features = ["derive"] }
toml = "0.5.8"
